Closed Bug 16319 Opened 25 years ago Closed 25 years ago

lots of assertions in nsFileSpec::operator from sign on code

Categories

(SeaMonkey :: Passwords & Permissions, defect, P3)

x86
Windows NT
defect

Tracking

(Not tracked)

VERIFIED FIXED

People

(Reporter: buster, Assigned: morse)

References

()

Details

nsDebug::Assertion(const char * 0x10086c58, const char * 0x10086c48, const char
* 0x10086c24, int 986) line 280 + 13 bytes
nsFileSpec::operator+(const char * 0x00000000) line 986 + 31 bytes
si_SaveSignonDataLocked(int 0) line 1744 + 31 bytes
si_PutReject(char * 0x02d750a0, char * 0x02d799f0, int 1) line 1153 + 7 bytes
si_OkToSave(char * 0x02d79d00, char * 0x02d799f0) line 1880 + 15 bytes
SINGSIGN_RememberSignonData(char * 0x02d79d00, char * * 0x0012e398, char * *
0x0012eb70, char * * 0x0012f340, int 13) line 1935 + 27 bytes
WLLT_OnSubmit(nsIContent * 0x02e68390) line 3209 + 37 bytes
nsWalletlibService::Notify(nsWalletlibService * const 0x01e393d8, nsIContent *
0x02e68390) line 182 + 9 bytes
nsFormFrame::OnSubmit(nsFormFrame * const 0x02ecd568, nsIPresContext *
0x02e10cd0, nsIFrame * 0x02ed6ae0) line 459
nsImageControlFrame::MouseClicked(nsIPresContext * 0x02e10cd0) line 418
nsImageControlFrame::HandleEvent(nsImageControlFrame * const 0x02ed6ae0,
nsIPresContext & {...}, nsGUIEvent * 0x0012fbd0, nsEventStatus &
nsEventStatus_eIgnore) line 261
PresShell::HandleEvent(PresShell * const 0x02e2cd04, nsIView * 0x02b2d180,
nsGUIEvent * 0x0012fbd0, nsEventStatus & nsEventStatus_eIgnore) line 2086 + 38
bytes
nsView::HandleEvent(nsView * const 0x02b2d180, nsGUIEvent * 0x0012fbd0, unsigned
int 8, nsEventStatus & nsEventStatus_eIgnore, int & 0) line 834
nsView::HandleEvent(nsView * const 0x02e3d380, nsGUIEvent * 0x0012fbd0, unsigned
int 8, nsEventStatus & nsEventStatus_eIgnore, int & 0) line 819
nsView::HandleEvent(nsView * const 0x02e3e410, nsGUIEvent * 0x0012fbd0, unsigned
int 8, nsEventStatus & nsEventStatus_eIgnore, int & 0) line 819
nsView::HandleEvent(nsView * const 0x02e3e4f0, nsGUIEvent * 0x0012fbd0, unsigned
int 8, nsEventStatus & nsEventStatus_eIgnore, int & 0) line 819
nsView::HandleEvent(nsView * const 0x02e2d190, nsGUIEvent * 0x0012fbd0, unsigned
int 28, nsEventStatus & nsEventStatus_eIgnore, int & 0) line 819
nsViewManager::DispatchEvent(nsViewManager * const 0x02e2d360, nsGUIEvent *
0x0012fbd0, nsEventStatus & nsEventStatus_eIgnore) line 1673
HandleEvent(nsGUIEvent * 0x0012fbd0) line 63
nsWindow::DispatchEvent(nsWindow * const 0x02e3e284, nsGUIEvent * 0x0012fbd0,
nsEventStatus & nsEventStatus_eIgnore) line 342 + 10 bytes
nsWindow::DispatchWindowEvent(nsGUIEvent * 0x0012fbd0) line 363
nsWindow::DispatchMouseEvent(unsigned int 301, nsPoint * 0x00000000 {x=???
y=???}) line 3313 + 21 bytes
ChildWindow::DispatchMouseEvent(unsigned int 301, nsPoint * 0x00000000 {x=???
y=???}) line 3531
nsWindow::ProcessMessage(unsigned int 514, unsigned int 0, long 17760621, long *
0x0012fdf4) line 2540 + 24 bytes
nsWindow::WindowProc(HWND__ * 0x004911e0, unsigned int 514, unsigned int 0, long
17760621) line 520 + 27 bytes
Status: NEW → ASSIGNED
Target Milestone: M11
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
Just checked in a fix.
Status: RESOLVED → VERIFIED
Summary: lots of assertions in nsFileSpec::operator+ from sign on code → lots of assertions in nsFileSpec::operator from sign on code
I can't verify, but will leave to buster to re-open if he still sees it.
Blocks: 16950
Product: Browser → Seamonkey
You need to log in before you can comment on or make changes to this bug.