fix bug 16319, stop assertion failure, r=dp